--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -216,13 +216,13 @@
   .website-shadow {
     width: 80%;
     height: 204px;
-    background: #000;
     position: absolute;
     bottom: 0px;
     box-shadow: 0 8px 60px rgba(0, 0, 0, .25);
   }
 
   .website {
+    width: 100%;
     height: 496px;
     background: #E8E8E8;
     border-radius: 40px;
@@ -231,6 +231,21 @@
       overflow-y: scroll;
       height: 100%;
       border-radius: 11px;
+      &::-webkit-scrollbar {
+        width: 1.2em;
+        height: 2em;
+        background: #fff;
+        border-radius: 0 11px 11px 0;
+      }
+      &::-webkit-scrollbar-thumb {
+        border: .4em solid transparent;
+        background-clip: padding-box;
+        border-radius: 1em;
+        background-color: #d4d4d4;
+      }
+      &::-webkit-scrollbar-corner {
+          background-color: transparent
+      }
     }
     img {
       width: 100%;
@@ -238,15 +253,19 @@
   }
 }
 
+.video video {
+  border-radius: 10px;
+}
 
 .footer {
+  box-shadow: 0 -4px 4px rgba(221, 221, 221, .25);
   .footer-info {
-    border-top: 1px solid #EEF1F6;
+    border-top: 1px solid #F4F4F8;
+    background: #FAFAFC;
     span {
-      color: #282828;
+      color: #000;
       font: {
-        size: 15px;
-        weight: 300;
+        size: 14px;
       }
       line-height: 23px;
     }
