fixed responsive issues

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -199,6 +199,13 @@
         weight: 700;
       }
     }
+    .result-title {
+      color: $primaryColor;
+      font: {
+        size: 18px;
+        weight: 700;
+      }
+    }
     .result-description {
       color: #3C4067;
       line-height: 27px;
