removed paragraph from 'before-after' section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -433,6 +433,12 @@
     font-size: 14px;
   }
 
+  .before-after .tab {
+    .tab-title {
+      font-size: 16px;
+    }
+  }
+
   .video {
     padding: 0 !important;
   }
