added line-height for results title

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -205,6 +205,7 @@
         size: 18px;
         weight: 700;
       }
+      line-height: 26px;
     }
     .result-description {
       color: #3C4067;
