--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -265,6 +265,9 @@
   .website {
     width: 100%;
     height: 496px;
+    @include media-breakpoint-only(md) {
+      height: 650px;  
+    }
     background: #E8E8E8;
     border-radius: 40px;
     position: relative;
@@ -293,6 +296,7 @@
     }
   }
 }
+
 
 .video video {
   border-radius: 10px;
@@ -347,7 +351,7 @@
       font-size: 14px;
     }
     .section-subtitle {
-      font-size: 13px;
+      font-size: 14px;
     }
   }
 
@@ -381,9 +385,6 @@
       line-height: 30px;
     }
     .section-description {
-      font-size: 14px;
-    }
-    .section-subtitle {
       font-size: 14px;
     }
   }
