changed 'before-after' tabs size in mobile devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -237,6 +237,14 @@
     border: 1px solid #F6F6F8;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .05);
     border-radius: 10px;
+    @media(max-width: 500px) {
+      width: 100%;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      &:first-child {
+        margin-bottom: 1.5rem !important;
+      }
+    }
     .tab-title {
       color: $titleColor;
       font-size: 18px;
