Changed titles for results

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -210,6 +210,7 @@
         size: 18px;
         weight: 700;
       }
+      line-height: 29px;
     }
     .result-description {
       color: #3C4067;
