removed hover from navbar link

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,6 +27,9 @@
     color: #000;
     font-size: 15px;
     font-weight: 500;
+    &:hover {
+      color: #000;
+    }
   }
   .btn-primary {
     .nav-link {
