Changed section titles color and removed paragraph text from 'THE RESULT' section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
 $primaryColor: #CD3D40 !default;
-$titleColor: #24416B !default;
+$titleColor: #353760 !default;
 $textColor: #6A7695 !default;
 $lightBg: #FAFAFC !default;
