decreased left padding for 'before-after' tabs title

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,7 +27,7 @@
     color: #000;
     font-size: 15px;
     font-weight: 500;
-    &:hover {
+    &:hover, &:focus {
       color: #000;
     }
   }
