Changed primary color, logo color and section title color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$primaryColor: #CD3D40 !default;
-$titleColor: #353760 !default;
+$primaryColor: #E73E3E !default;
+$titleColor: #091069 !default;
 $textColor: #6A7695 !default;
 $lightBg: #FAFAFC !default;
