--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -53,6 +53,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   	text-decoration: none; }
 
   a:hover {
+    color: #000;
   	text-decoration: none; }
   a img { border: 0 none; }
   a > img { vertical-align: bottom; }
