--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
 $primaryColor: #E73E3E !default;
-$titleColor: #091069 !default;
+$titleColor: #112C61 !default;
 $textColor: #6A7695 !default;
 $lightBg: #FAFAFC !default;
