changed padding for 'before-after' tabs

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -255,6 +255,7 @@ button:focus {
       border: 1px solid #F6F6F8;
       box-shadow: 0 2px 10px rgba(0, 0, 0, .05);
       border-radius: 10px;
+      padding: 23px;
       .tab-title {
         color: $titleColor;
         font-size: 17px;
